fixed profile name overflow for header and profile cards
Also limited profile names to 64 characters

fixes https://linear.app/nexus-mods/issue/APP-89/long-profile-names-can-overlap-the-border-of-the-profile-cards-and-the

--- a/src/stylesheets/vortex/page-profile.scss
+++ b/src/stylesheets/vortex/page-profile.scss
@@ -73,6 +73,11 @@
     .profile-name {
         margin: $half-gutter;
         font-family: $font-family-headings;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     .profile-image {
